Re-added the chrisn prompt as a prompt theme. Started work on my version of the wunjo theme.

--- a/zsh/config
+++ b/zsh/config
@@ -70,91 +70,7 @@ bindkey . rationalise_dot
 WORDCHARS=${WORDCHARS//[&=\/;!#%\{]}
 bindkey -e
 
-# === The old prompt code, before "wunjo".
-# # How it looks, for example:
-# #   [1] 2#276<p5>lilith:.../rack/lib/rack$
-# # This means, the last command exited with status 1, it is a second-level
-# # subshell, line 276 of history (for !), running on ttyp5 on my trusty iBook
-# # lilith, and I'm a normal user ($) in the rack/lib/rack directory on my disk
-# # (I know where that is).
-# #
-# # I don’t use a right-hand-side prompt at the moment because I think it’s
-# # confusing, especially if your terminal isn’t very wide.
-# 
-# # Terminal title, using a precmd. Host and path are enough for my purposes.
-# precmd()
-# {
-# # print -Pn "\e]0;%n@%m: %d\a"
-# 
-#   local TERMWIDTH
-#   (( TERMWIDTH = ${COLUMNS} - 1 ))
-# 
-#   # Truncate the path if it's too long.
-#   PR_FILLBAR=""
-#   PR_PWDLEN=""
-# 
-#   local promptsize=${#${(%):---(%n@%m:%l)---()--}}
-#   local pwdsize=${#${(%):-%~}}
-# 
-#   if [[ "$promptsize + $pwdsize" -gt $TERMWIDTH ]]; then
-#     ((PR_PWDLEN=$TERMWIDTH - $promptsize))
-#   else
-#     PR_FILLBAR="\${(l.(($TERMWIDTH - ($promptsize + $pwdsize)))..${PR_HBAR}.)}"
-#   fi
-# }
-# 
-# preexec()
-# {
-#   if [[ "$TERM" == "screen" ]]; then
-#     local CMD=${1[(wr)^(*=*|sudo|-*)]}
-#     echo -n "\ek$CMD\e\\"
-#   fi
-# }
-# 
-# setprompt()
-# {
-#   # Need this so the prompt will work.
-#   setopt prompt_subst
-# 
-#   PR_TITLEBAR=''
-#   PR_STITLE=''
-# 
-#   # Decide if we need to set titlebar text.
-#   # Decide whether to set a screen title
-#   case $TERM in
-#     xterm*|ansi)    PR_TITLEBAR=$'%{\e]0;%(!.-=*[ROOT]*=- | .)%n@%m:%~ | ${COLUMNS}x${LINES} | %y\a%}'
-#                     ;;
-#     screen)         PR_TITLEBAR=$'%{\e_screen \005 (\005t) | %(!.-=[ROOT]=- | .)%n@%m:%~ | ${COLUMNS}x${LINES} | %y\e\\%}'
-#                     PR_STITLE=$'%{\ekzsh\e\\%}'
-#                     ;;
-#   esac
-# 
-#   if [[ -n ${SSH_CONNECTION} ]]; then
-#     export PS1='${PR_STITLE}${(e)PR_TITLEBAR}%(?..${fg_bold[red]}(%?%) )${reset_color}\
-# ${fg[blue]}(${fg[green]}%(!.%SROOT%s.%n)${fg[green]}@%m:%l${fg[blue]}) \
-# ${fg[blue]}[${fg[magenta]}%(4~,.../,)%3~${fg[blue]}]\
-# $(git_info_for_prompt "${fg[green]}|%s")
-# %(2L.${fg[blue]}<${fg[green]}%L${fg[blue]}>.)\
-# ${fg[cyan]}%h${fg[blue]}%(!.#.$) ${reset_color}'
-#   else
-#     export PS1='$PR_STITLE${(e)PR_TITLEBAR}%(?..${fg_bold[red]}(%?%) )${reset_color}\
-# %(!.${fg[blue]}(${fg[green]}%SROOT%s${fg[green]}@%m${fg[blue]}) .)\
-# ${fg[blue]}[${fg[magenta]}%(4~,.../,)%3~${fg[blue]}]\
-# $(git_info_for_prompt "${fg[green]}|%s")
-# %(2L.${fg[blue]}<${fg[green]}%L${fg[blue]}>.)\
-# ${fg[cyan]}%h${fg[blue]}%(!.#.$) ${reset_color}'
-#   fi
-# 
-#   PS2="${fg[blue]}($fg_bold[green]%_${fg[blue]})${reset_color} "
-# }
-# 
-# # The prompt, I used a rather bloated prompt with Bash; this is a stripped-down
-# # version with everything removed I don’t need. (And the monochrome version.)
-# 
-# # setprompt
-
 setopt prompt_subst
-autoload -U promptinit
-promptinit
+autoload -U promptinit && promptinit
 
-prompt wunjo
+prompt austin
