Working around vcs_info limitations (%c/%u).
+ Vendoring zsh itself (vendor/zsh).
+ Putting a locally installed version of the vcs_info for latest zsh
  version (4.3.11) in zsh/vcs-info so it can be used by pre 4.3.10
  versions. This adds %c and %u to _formats.
+ Adding some additional prompts as I get ready to clean up the prompt
  handling in my zsh.
+ Moving vcs_info zstyle code from zle-completion to prompt.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/oh-my-zsh"]
 	path = vendor/oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
+[submodule "vendor/zsh"]
+	path = vendor/zsh
+	url = git://zsh.git.sf.net/gitroot/zsh/zsh
