--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/zsh"]
 	path = vendor/zsh
 	url = git://zsh.git.sf.net/gitroot/zsh/zsh
+[submodule "vendor/grml-etc-core"]
+	path = vendor/grml-etc-core
+	url = git://git.grml.org/grml-etc-core.git
