--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vendor/solarized"]
 	path = vendor/solarized
 	url = https://github.com/altercation/solarized.git
+[submodule "vendor/zsh-virtualbox"]
+	path = vendor/zsh-virtualbox
+	url = https://github.com/mtorromeo/zsh-virtualbox.git
