Adding ruby-build as a vendor script.

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vendor/hg-git"]
 	path = vendor/hg-git
 	url = git://github.com/schacon/hg-git.git
+[submodule "vendor/ruby-build"]
+	path = vendor/ruby-build
+	url = git://github.com/sstephenson/ruby-build.git
