Changes related to template file support.
- Split the repo gitignore from the global gitignore.
- Converted documentation to markdown.
- Made hgfold a package that gets installed as needed.
  - This code will be refactored into a method on DotfileInstaller if I
    decide to install another external Mercurial-based package.
- Moved the task remap to DotfileInstaller#fix_prerequisites!
- Converted all of the old "<.replace FILENAME>" semantics to ERB
  templating. Makes the templates more powerful and the backing code
  substantially simpler.
- Finally started the personalization process. I'm not particularly
  happy with the setup[name, email] task—but I'm not sure how I want to
  do this. I do like the user/ directory for user settings.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-gitignore
+.DS_Store
+*~
+*.sw[op]
+*.pyc
+*.rbc
+.rake_tasks~
+*.zwc
+
+# This datafile belongs per machine, not globally.
+ztodolist
+
+/user
+/packages
