--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,32 @@
 # ~/.tmux.conf
-#
 # Based on various tmux configurations I've seen.
 
-## Prefix Key
-# Set the prefix key to Ctrl-T.
-set-option -g prefix C-t
-unbind C-b
-bind C-t send-prefix
-bind t send-prefix
+# Don't prompt.
+# bind-key x kill-pane
+# bind-key & kill-window
 
-### Status Bar Setup
+# Cycle panes with 'C-b, b'
+unbind ^B
+bind ^B select-pane -t :.*
+
+# Reload conf with C-t, r
+unbind r
+bind r source-file ~/.tmux.conf
+
+# Swap panes with C-t, o
+# unbind o
+# bind o rotate-window -D
+
+# Clear with 'C-a, k'
+# bind k send-keys "clear"\; send-keys "Enter"
+
+# No mouse scrolling, as it also means we can't select-then-copy text
+# to the regular clipboard.
+set -g mode-mouse off
+# Click to select pane.
+set-option -g mouse-select-pane on
+
+## Status Bar Setup
 # set-option -g status-bg green
 set-option -g status-bg default
 set-option -g status-fg white
@@ -83,7 +100,7 @@ set-option -g history-limit 5000
 # on-screen time for display-panes in ms
 set -g display-panes-time 3000
 
-# start window indexing at one instead of zero
+# Start window index at 1.
 set -g base-index 1
 
 # enable wm window titles
@@ -115,18 +132,18 @@ set -g set-titles-string "tmux.#I.#W"
 # # appropriate tmux key bindings.  Note that for many key bindings there is no
 # # tmux analogue.  This is intended for tmux 1.3, which handles pane selection
 # # differently from the previous versions
-# 
+#
 # # split windows like vim
 # # vim's definition of a horizontal/vertical split is reversed from tmux's
 # bind s split-window -v
 # bind v split-window -h
-# 
+#
 # # move around panes with hjkl, as one would in vim after pressing ctrl-w
 # bind h select-pane -L
 # bind j select-pane -D
 # bind k select-pane -U
 # bind l select-pane -R
-# 
+#
 # # resize panes like vim
 # # feel free to change the "1" to however many lines you want to resize by, only
 # # one at a time can be slow
@@ -134,11 +151,10 @@ set -g set-titles-string "tmux.#I.#W"
 # bind > resize-pane -R 1
 # bind - resize-pane -D 1
 # bind + resize-pane -U 1
-# 
+#
 # # bind : to command-prompt like vim
 # # this is the default in tmux already
 # bind : command-prompt
-# 
+#
 # # vi-style controls for copy mode
 # setw -g mode-keys vi
-# 
