--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,15 @@
 [submodule "vendor/highline"]
 	path = vendor/highline
 	url = git://github.com/JEG2/highline.git
+[submodule "vendor/joshuaclayton-dotfiles"]
+	path = vendor/joshuaclayton-dotfiles
+	url = git://github.com/joshuaclayton/dotfiles.git
+[submodule "vendor/colinhebert-dotfiles"]
+	path = vendor/colinhebert-dotfiles
+	url = git://github.com/ColinHebert/dotfiles.git
+[submodule "vendor/rtomayko-dotfiles"]
+	path = vendor/rtomayko-dotfiles
+	url = git://github.com/rtomayko/dotfiles.git
+[submodule "vendor/skwp-dotfiles"]
+	path = vendor/skwp-dotfiles
+	url = git://github.com/skwp/dotfiles.git
