--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vendor/skwp-dotfiles"]
 	path = vendor/skwp-dotfiles
 	url = git://github.com/skwp/dotfiles.git
+[submodule "vendor/icefox-git-hooks"]
+	path = vendor/icefox-git-hooks
+	url = git://github.com/icefox/git-hooks.git
