--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vendor/sykora-etc"]
 	path = vendor/sykora-etc
 	url = git://github.com/sykora/etc.git
+[submodule "vendor/zsh-completions"]
+	path = vendor/zsh-completions
+	url = git://github.com/zsh-users/zsh-completions.git
