--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vendor/hub-zsh-completion"]
 	path = vendor/hub-zsh-completion
 	url = git://github.com/glidenote/hub-zsh-completion.git
+[submodule "vendor/dotzsh"]
+	path = vendor/dotzsh
+	url = git://github.com/dotphiles/dotzsh.git
