Incorporating changes from sykora’s etc repo.

--- a/tmux.conf
+++ b/tmux.conf
@@ -109,6 +109,8 @@ set -g set-titles on
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W"
 
+set -g default-terminal "screen-256color"
+
 ##
 # new-session [-d] [-n window-name] [-s session-name] [-t target-session]
 #             [shell-command]
