--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vendor/phinze-dotfiles"]
 	path = vendor/phinze-dotfiles
 	url = git://github.com/phinze/dotfiles.git
+[submodule "vendor/adamv-dotfiles"]
+	path = vendor/adamv-dotfiles
+	url = git://github.com/adamv/dotfiles.git
