Adding submodule git://github.com/zsh-users/antigen as vendor/antigen

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vendor/freshshell"]
 	path = vendor/freshshell
 	url = git://github.com/freshshell/fresh
+[submodule "vendor/antigen"]
+	path = vendor/antigen
+	url = git://github.com/zsh-users/antigen
